index.css
body {
  font-family: 'Poppins', sans-serif;
}

.project-grid {
  display: grid;
  grid-template-areas:
    "eth eth alphabet"
    "eth eth traveler"
    "astro cube traveler"
    "cup insta insta"
    "cup insta insta"
    "foam foam dimensional"
    "foam foam dimensional";
}

#eth {
  grid-area: eth;
}

#alphabet {
  grid-area: alphabet;
}

#traveler {
  grid-area: traveler;
}

#astro {
  grid-area: astro;
}

#cube {
  grid-area: cube;
}

#cup {
  grid-area: cup;
}

#insta {
  grid-area: insta;
}

#foam {
  grid-area: foam;
}

#dimensional {
  grid-area: dimensional;
}

.project {
  position: relative;
}

.project img {
  width: 100%;
  object-fit: cover;
  height: 100%;
}

.project .overlay {
  background-color: rgba(2525, 255, 255, 0.1);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0;
  font-size: 36px;
  font-weight: bold;
  letter-spacing: 2px;
  opacity: 0;
  transition: all 0.2s ease;
}

.project .overlay:hover {
  opacity: 1;
  cursor: pointer;
}

